feat(streams): estructurar ejemplos en niveles progresivos y mejoras en Optional
    - Renombrar ejemplos de streams para catalogarlos por nivel de dificultad.
    - Añadir en App una guía progresiva completa de 8 niveles (Java 8 a 25).
    - Crear EjemplosStreamsMejorasIntermedias para novedades de Java 9, 10 y 16.
    - Crear EjemplosStreamsGatherersAvanzado y EjemplosStreamsGathererPersonalizado para Java 24/25.
    - Añadir casos prácticos de Optional.stream() genérico en optional.
    - Actualizar control de versiones VERSIONS.md y archivos README.md.